--- a/dots/.gitconfig
+++ b/dots/.gitconfig
@@ -1,3 +1,7 @@
 [user]
   name = danielefongo
   email = danielefongo@gmail.com
+[core]
+  pager = "diff-so-fancy | less --tabs=4 -RFX"
+[pager]
+  show = "diff-so-fancy | less --tabs=1,5 -RFX"
