--- a/conf/startup/com.dotfiles.plist
+++ b/conf/startup/com.dotfiles.plist
@@ -2,10 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
   <dict>
+    <key>ProgramArguments</key>
+    <array>
+        <string>sh</string>
+        <string>-c</string>
+        <string>"$HOME/.startup"</string>
+    </array>
     <key>Label</key>
     <string>com.dotfiles</string>
-    <key>Program</key>
-    <string>/Users/WHOAMI/startup</string>
     <key>RunAtLoad</key>
     <true />
   </dict>
