--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,14 +8,15 @@
       stdin: true
 
 - link:
-    ~/.aliases: dots/.aliases
-    ~/.gitconfig: dots/.gitconfig
-    ~/.hyper.js: dots/.hyper.js
-    ~/.zshrc: dots/.zshrc
-    ~/Library/Application Support/Sublime Text 3/Packages/User/Preferences.sublime-settings: 'dots/.extra-dots/sublime/Preferences.sublime-settings'
-    ~/Library/Application Support/Sublime Text 3/Installed Packages/Package Control.sublime-package: 'dots/.extra-dots/sublime/Package Control.sublime-package'
-    ~/Library/Application Support/Sublime Text 3/Installed Packages/Package Control.sublime-settings: 'dots/.extra-dots/sublime/Package Control.sublime-settings'
+    ~/.startup: conf/dots/.startup
+    ~/.aliases: conf/dots/.aliases
+    ~/.gitconfig: conf/dots/.gitconfig
+    ~/.hyper.js: conf/dots/.hyper.js
+    ~/.zshrc: conf/dots/.zshrc
+    ~/Library/Application Support/Sublime Text 3/Packages/User/Preferences.sublime-settings: 'conf/dots/sublime/Preferences.sublime-settings'
+    ~/Library/Application Support/Sublime Text 3/Installed Packages/Package Control.sublime-package: 'conf/dots/sublime/Package Control.sublime-package'
+    ~/Library/Application Support/Sublime Text 3/Installed Packages/Package Control.sublime-settings: 'conf/dots/sublime/Package Control.sublime-settings'
 
 - shell: 
-  - [sh old_install startup]
-  - [sh old_install scripts]
+  - [sh scripts/startup]
+  - [sh scripts/install]
