add some neovim configurations

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -13,6 +13,7 @@
     ~/.gitconfig: conf/dots/.gitconfig
     ~/.hyper.js: conf/dots/.hyper.js
     ~/.zshrc: conf/dots/.zshrc
+    ~/.config/nvim/init.vim: conf/dots/.vimrc
     ~/Library/Application Support/Code/User/settings.json: 'conf/dots/vscode/settings.json'
     ~/Library/Application Support/Sublime Text 3/Packages/User/Preferences.sublime-settings: 'conf/dots/sublime/Preferences.sublime-settings'
     ~/Library/Application Support/Sublime Text 3/Installed Packages/Package Control.sublime-package: 'conf/dots/sublime/Package Control.sublime-package'
