--- a/conf/dots/.gitconfig
+++ b/conf/dots/.gitconfig
@@ -3,5 +3,6 @@
   email = danielefongo@gmail.com
 [core]
   pager = "diff-so-fancy | less --tabs=4 -RFX"
+  editor = 'nvim'
 [pager]
   show = "diff-so-fancy | less --tabs=1,5 -RFX"
