--- a/conf/dots/.gitconfig
+++ b/conf/dots/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-  name = danielefongo
-  email = danielefongo@gmail.com
+  name = Giacomo Montibeller
+  email = giacomo.montibeller@xpeppers.com
 [core]
   pager = "diff-so-fancy | less --tabs=4 -RFX"
   editor = 'nvim'
